src/snapshots/palinter__analyze_ts_deps__tests__get_project_files_deps_info_test_2.snap
---
source: src/analyze_ts_deps.rs
assertion_line: 382
expression: "BTreeMap::from_iter(result)"
---
{
    "./src/fileA.ts": FileDepsInfo {
        deps: {
            "./src/fileC.ts",
        },
        has_circular_deps: false,
        imports: [
            Import {
                import_path: "@src/fileC",
                line: 2,
                values: Named(
                    [
                        "c",
                    ],
                ),
            },
        ],
        exports: [],
    },
    "./src/fileB.ts": FileDepsInfo {
        deps: {
            "./src/fileC.ts",
        },
        has_circular_deps: false,
        imports: [
            Import {
                import_path: "@src/fileC",
                line: 2,
                values: Named(
                    [
                        "c",
                    ],
                ),
            },
        ],
        exports: [],
    },
    "./src/fileC.ts": FileDepsInfo {
        deps: {},
        has_circular_deps: false,
        imports: [],
        exports: [
            Export {
                line: 2,
                name: "c",
            },
        ],
    },
    "./src/index.ts": FileDepsInfo {
        deps: {
            "./src/fileA.ts",
            "./src/fileB.ts",
            "./src/fileC.ts",
        },
        has_circular_deps: false,
        imports: [
            Import {
                import_path: "@src/fileA",
                line: 2,
                values: Named(
                    [
                        "a",
                    ],
                ),
            },
            Import {
                import_path: "@src/fileB",
                line: 3,
                values: Named(
                    [
                        "b",
                    ],
                ),
            },
        ],
        exports: [],
    },
}
