src/snapshots/palinter__analyze_ts_deps__tests__project_with_circular_deps.snap
---
source: src/analyze_ts_deps.rs
assertion_line: 374
expression: "BTreeMap::from_iter(result)"
---
{
    "./src/fileA.ts": FileDepsInfo {
        deps: {
            "./src/fileB.ts",
        },
        has_circular_deps: false,
        imports: [
            Import {
                import_path: "@src/fileB",
                line: 2,
                values: Named(
                    [
                        "c",
                    ],
                ),
            },
        ],
        exports: [
            Export {
                line: 3,
                name: "a",
            },
            Export {
                line: 4,
                name: "b",
            },
        ],
    },
    "./src/fileB.ts": FileDepsInfo {
        deps: {
            "./src/fileA.ts",
            "./src/fileB.ts",
        },
        has_circular_deps: true,
        imports: [
            Import {
                import_path: "@src/fileA",
                line: 2,
                values: Named(
                    [
                        "a",
                    ],
                ),
            },
            Import {
                import_path: "@src/fileA",
                line: 3,
                values: Named(
                    [
                        "b",
                    ],
                ),
            },
            Import {
                import_path: "testLib",
                line: 4,
                values: Named(
                    [
                        "test",
                    ],
                ),
            },
        ],
        exports: [
            Export {
                line: 5,
                name: "c",
            },
        ],
    },
    "./src/index.ts": FileDepsInfo {
        deps: {
            "./src/fileA.ts",
            "./src/fileB.ts",
        },
        has_circular_deps: false,
        imports: [
            Import {
                import_path: "@src/fileB",
                line: 1,
                values: SideEffect,
            },
        ],
        exports: [],
    },
}
